--- a/webapp/front/front/src/index.html
+++ b/webapp/front/front/src/index.html
@@ -1,20 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Neibo</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!--TODO averiguar si afecta-->
-  <!--
+  <head>
+    <meta charset="utf-8" />
+    <title>Neibo</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-pVY1gH3wX/0XPH3uV3Wx2xv7VoxC2g3E6jvC8g6nU7FgzVmk/h8pKx+hZJGurYZ5u+fVxRgPpAxwU2ydGt/7bA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+    <!--TODO averiguar si afecta-->
+    <!--
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  -->
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  --></head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
