--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,15 +5,8 @@
     <title>Neibo</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="icon" type="image/x-icon" href="/src/favicon.ico" />
-    <!--TODO averiguar si afecta-->
-    <!--
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  --></head>
+    <link rel="icon" type="image/x-icon" href="src/favicon.ico" />
+  </head>
   <body>
     <app-root></app-root>
   </body>
